--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,10 +35,10 @@ jobs:
         with:
           path: dist
 
-      # - uses: guardian/actions-static-site@v2
-      #   with:
-      #     app: interview-questions-tool
-      #     domain: capex.gutools.co.uk
-      #     guActionsRiffRaffRoleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+      - uses: guardian/actions-static-site@v2
+        with:
+          app: capex
+          domain: capex.gutools.co.uk
+          guActionsRiffRaffRoleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
 
     
